# photosync

./: .gitignore  README.md  README.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
app/: __init__.py  __main__.py  catalog.py  config.py  db.py  hasher.py  main.py  paths.py  rclone_client.py  scanner.py  stub.py  sync_engine.py
app/providers/: __init__.py  base.py  dropbox.py  google_drive.py  onedrive.py  s3_compatible.py
app/ui/: __init__.py  main_window.py  password_prompt.py  widgets.py  wizard.py
docs/: ARCHITECTURE.md  BUILD.md  CONTRIBUTING.md  index.html
scripts/: build.py  download_rclone.py
tests/: conftest.py  test_catalog.py  test_config.py  test_db.py  test_hasher.py  test_paths.py  test_providers.py  test_rclone_client.py  test_scanner.py  test_stub.py  test_sync_engine.py
