[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photosync"
version = "0.1.0"
description = "Portable USB-to-cloud photo/video backup with SHA-256 deduplication, powered by rclone."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PhotoSync contributors" }]
keywords = ["backup", "photos", "cloud", "rclone", "deduplication", "portable"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "customtkinter>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pyinstaller>=6.0",
]

[project.scripts]
photosync = "app.main:main"

[tool.setuptools]
packages = ["app", "app.providers", "app.ui"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
files = ["app", "scripts"]

[[tool.mypy.overrides]]
module = "customtkinter.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.ui.*"
disable_error_code = ["misc", "no-any-return"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
